<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.digitcreativestudio.myappportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_title"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            style="@style/TextAppTitle"
            android:text="@string/app_title"/>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_below="@id/app_title">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_1"
                style="@style/ButtonAppNavigation"
                android:text="@string/app_1" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_2"
                style="@style/ButtonAppNavigation"
                android:text="@string/app_2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_3"
                style="@style/ButtonAppNavigation"
                android:text="@string/app_3"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_4"
                style="@style/ButtonAppNavigation"
                android:text="@string/app_4"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_5"
                style="@style/ButtonAppNavigation"
                android:text="@string/app_5"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_6"
                style="@style/ButtonAppNavigation2"
                android:textColor="@android:color/white"
                android:text="@string/app_6"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
